# NEMO-custom-forms

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  run_tests.py
NEMO_custom_forms/: admin.py  apps.py  customization.py  customizations.py  fields.py  forms.py  models.py  notifications.py  pdf_utils.py  urls.py  utilities.py
NEMO_custom_forms/migrations/: 0001_initial.py  0002_alter_customformdocuments_display_order.py  0003_customformpdftemplate_notes_placeholder.py  0004_alter_customform_form_number.py  0005_alter_custom_mapping_signature.py  0006_customformactionrecord_action_name.py
NEMO_custom_forms/static/NEMO_custom_forms/: custom-forms.css
NEMO_custom_forms/templates/NEMO_custom_forms/: choose_template.html  custom_form.html  custom_form_templates.html  custom_forms.html  custom_forms_base.html
NEMO_custom_forms/templates/NEMO_custom_forms/customizations/: customizations_custom_forms.html
NEMO_custom_forms/templates/customizations/: customizations_custom_forms.html
NEMO_custom_forms/templatetags/: custom_form_tags.py
NEMO_custom_forms/tests/: test_custom_forms.py  test_settings.py
NEMO_custom_forms/views/: custom_forms.py
resources/emails/: custom_form_action_required_email.html  custom_form_received_email.html  custom_form_status_update_email.html
